[workspace]
resolver = "2"
members = [ "pumpfun-cpi", "pumpfun-global","pumpfun-instructions"]

[workspace.dependencies]
solana-client = "2.3"
solana-sdk = "2.3"
solana-commitment-config = "2.2"

borsh = { version = "1.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

tokio = { version = "1", features = ["full"] }
thiserror = { version = "1.0" }
