[package]
name = "pumpfun_amm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-instruction = "2.2"
solana-program = "2.2"
borsh = { version = "1.5", features = ["derive"] }
thiserror = { version = "1.0" }

[dev-dependencies]
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }

spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"

pumpfun_global = { path = "../pumpfun-global" }
pumpfun_instructions = { path = "../pumpfun-instructions" }
solana-sdk = { workspace = true }


anyhow = "1.0"
serde_json = "1.0"

tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
no-entrypoint = []
