[package]
name = "pumpfun_instructions"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-sdk = { workspace = true }
pumpfun_global = { path = "../pumpfun-global" }
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"
spl-token-2022 = "9.0.0"

borsh = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

